IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2/11/15: Added options to Densmatch to scale to a given mean/SD, change the
mode for a new output file, and assess the existing density using all pixels
instead of a sample of pixels.

2/7/15: IMOD_4-8-22
2/7/15: Fix batch interface to put out gold=0 when there are no fiducials, needed to get through tomogram setup for patch tracking.

2/5/15: IMOD_4-7-13
2/2/15: IMOD_4-8-21
2/1/15: Fixed robust fitting with whole contours that aren't cut into pieces 
(In 4.7).

1/29/15: Fixed problems with running SIRT with binned K2 data by making eTomo
put out an even size for binned stack and by improving Tilt's evaluation of
whether the tilt axis is centered (In 4.7).

1/19/15: Preliminary version of batch processing interface added to eTomo.

1/15/15: IMOD_4-8-18
1/14/15: Made Ctfplotter delete all existing values in table when autofitting
to whole range, not just ones with midpoints bracketed by the new midpoints.

1/11/15: IMOD_4-8-17
1/10/15: Various PEET interface changes for working with single-particle
volumes and with masks.

1/10/15: Fixed bug in Imodauto if there are empty boundary contours (In 4.7).

1/8/15: Make Boxstartend fill to mean of existing data when extracting only
one slice per point.

1/8/15: Added a script Rawtomocoords to compute positions in the raw tilt
series, projection angles, and defocus for points marked in a tomogram.

1/3/15: Implemented a dynamic adjustment of maximum strip width in
Ctfphaseflip to minimize artifactual rings of low values around the zeros in
the power spectrum.  Spacing between strips is increased between wider strips
at low tilt, and the default spacing value in the .com file was reduced to
compensate for this change.

1/3/15: Fixed error in the last interpolation region between strips in 
Ctfphaseflip (In 4.7).

1/3/15: Ctfplotter changes:
  Added option to fit a polynomial to make the power spectrum become flat at